--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,11 +7,13 @@
     <script defer src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <link defer href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script defer src="./common.js"></script>
+    <link rel="stylesheet" href="./common/common.css">
+    <script defer src="./common/common.js"></script>
     <title>Document</title>
 </head>
 <body>
     <div id="navbar"></div>
-    <h1>Social App</h1>
+    <div id="content"></div>
+    <div id="footer"></div>
 </body>
 </html>
