--- a/src/public/index.html
+++ b/src/public/index.html
@@ -12,9 +12,13 @@
         crossorigin="anonymous"></script>
     <link defer href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link defer rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./app/common.css">
+    <link rel="stylesheet" href="./app/footer.css">
+
+
     <script defer src="./app/common.js"></script>
-    <title>Document</title>
+    <title>SocialApp</title>
 </head>
 
 <body>
