--- a/src/public/index.html
+++ b/src/public/index.html
@@ -18,7 +18,7 @@
 
 
     <script defer src="./app/common.js"></script>
-    <title>SocialApp</title>
+    <title>BlogApp</title>
 </head>
 
 <body>
